--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
+		<!-- Lombok依赖，不属于springboot,cloud家族，版本号自行指定 -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
